Fixed problem with background image not scaling on mobile

--- a/public/css/main_page.css
+++ b/public/css/main_page.css
@@ -1,7 +1,6 @@
 body{
     background-image: url("http://cdn.wallpapersafari.com/38/76/a4uKN6.jpg");
     background-position: center;
-    background-size: cover;
 }
 
 .main_content{
